--- a/packages/front/.vscode/launch.json
+++ b/packages/front/.vscode/launch.json
@@ -2,12 +2,12 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Next.js: debug",
+      "name": "Debug",
       "type": "node-terminal",
       "request": "launch",
-      "command": "google-chrome http://localhost:3001 && npm run dev",
+      "command": "npm run dev",
       "serverReadyAction": {
-        "pattern": "started server on .+, url: (https?://.+)",
+        "pattern": "Local:        (https?://.+)",
         "uriFormat": "%s",
         "action": "debugWithChrome"
       }
