--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -5,6 +5,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "just-clone": "^6.2.0",
     "just-diff": "^6.0.2",
     "just-extend": "6.2.0",
     "next": "latest",
