--- a/packages/front/Dockerfile
+++ b/packages/front/Dockerfile
@@ -77,7 +77,7 @@ COPY ./$APP/.env.docker.$ENV ./.env
 
 # Disable telemetry during the build.
 # Learn more here: https://nextjs.org/telemetry
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN yarn build
 
@@ -85,9 +85,9 @@ RUN yarn build
 FROM base AS runner
 WORKDIR /packages/app
 
-ENV NODE_ENV production
+ENV NODE_ENV=production
 # Disable telemetry during runtime.
-ENV NEXT_TELEMETRY_DISABLED 1
+ENV NEXT_TELEMETRY_DISABLED=1
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
@@ -110,9 +110,9 @@ USER nextjs
 
 EXPOSE 3000
 
-ENV PORT 3000
+ENV PORT=3000
 # set hostname to localhost
-ENV HOSTNAME "0.0.0.0"
+ENV HOSTNAME="0.0.0.0"
 
 
 # server.js is created by next build from the standalone output
