--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "#shared": "workspace:../shared/build",
     "axios": "1.5.0",
+    "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
     "date-ops": "2.2.0",
     "envalid": "7.3.1",
@@ -27,6 +28,7 @@
   "description": "",
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
+    "@chevrotain/types": "11.0.3",
     "@types/cors": "2.8.14",
     "@types/express": "4.17.17",
     "@types/fluent-ffmpeg": "2.1.22",
