--- a/packages/server/.vscode/launch.json
+++ b/packages/server/.vscode/launch.json
@@ -14,6 +14,24 @@
       "runtimeArgs": ["run-script", "start:watch"],
       "skipFiles": ["<node_internals>/**"],
       "type": "node"
+    },
+    { /* Se usa para debuggear tests con la extensión de Jest */
+      "type": "node",
+      "name": "vscode-jest-tests.v2.server",
+      "request": "launch",
+      "args": [
+        "test",
+        "--",
+        "--watchAll=false",
+        "--testNamePattern",
+        "${jest.testNamePattern}",
+        "--runTestsByPath",
+        "${jest.testFile}"
+      ],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "runtimeExecutable": "npm"
     }
   ]
 }
