--- a/packages/package.json
+++ b/packages/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "mcenter",
-  "description": "Centro Multimedia",
-  "version": "3.10.1",
   "author": "Dani Sales",
   "contributors": [
     {
-      "name": "Daniel Sales",
-      "email": "danisales.es@gmail.com"
+      "email": "danisales.es@gmail.com",
+      "name": "Daniel Sales"
     }
-  ],
-  "license": "UNLICENSED",
-  "private": true,
-  "workspaces": [],
-  "nohoist": [
-    "server"
   ],
   "dependencies": {
     "esm": "3.2.25",
-    "tslib": "2.6.2"
+    "tslib": "2.8.1"
   },
+  "description": "Centro Multimedia",
   "devDependencies": {
-    "@commitlint/cli": "17.6.6",
-    "@commitlint/config-conventional": "17.6.6",
-    "@typescript-eslint/eslint-plugin": "5.61.0",
-    "@typescript-eslint/parser": "5.61.0",
-    "eslint": "8.44.0",
+    "@commitlint/cli": "19.6.1",
+    "@commitlint/config-conventional": "19.6.0",
+    "@types/jest": "29.5.14",
+    "@typescript-eslint/eslint-plugin": "8.21.0",
+    "@typescript-eslint/parser": "8.21.0",
+    "eslint": "9.18.0",
     "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "3.5.5",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest": "27.2.2",
-    "eslint-plugin-prettier": "4.2.1",
-    "husky": "8.0.3",
-    "prettier": "3.0.0",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jest": "28.11.0",
+    "eslint-plugin-prettier": "5.2.3",
+    "husky": "9.1.7",
+    "jest": "29.7.0",
+    "prettier": "3.4.2",
     "standard-version": "9.5.0",
+    "ts-jest": "29.2.5",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.2.2",
-    "jest": "29.6.4",
-    "ts-jest": "29.1.1",
-    "@types/jest": "29.5.4"
+    "typescript": "5.7.3"
   },
+  "license": "UNLICENSED",
+  "name": "mcenter",
+  "nohoist": [
+    "server"
+  ],
+  "private": true,
   "scripts": {
-    "release": "standard-version",
-    "prepare": "cd .. && husky install packages/.husky",
     "clean:modules": "rm -rf node_modules && cd server && npm clean:modules",
-    "lint:eslint": "eslint **/*.{ts,js,tsx,jsx}",
-    "lint:prettier": "prettier **/*.{json,jsonc,scss,yml}",
-    "lint:fix": "pnpm run lint:prettier --write && pnpm run lint:eslint --fix",
-    "version:release": "standard-version",
     "git:pr": "pnpm git:pr:create && pnpm git:pr:merge-delete",
     "git:pr:create": "gh pr create --base main --fill",
     "git:pr:merge": "gh pr merge --auto --rebase",
-    "git:pr:merge-delete": "gh pr merge --auto --rebase --delete-branch"
-  }
+    "git:pr:merge-delete": "gh pr merge --auto --rebase --delete-branch",
+    "lint:eslint": "eslint **/*.{ts,js,tsx,jsx}",
+    "lint:fix": "pnpm run lint:prettier --write && pnpm run lint:eslint --fix",
+    "lint:prettier": "prettier **/*.{json,jsonc,scss,yml}",
+    "prepare": "cd .. && husky install packages/.husky",
+    "release": "standard-version",
+    "version:release": "standard-version"
+  },
+  "version": "3.10.1",
+  "workspaces": []
 }
