--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,51 +1,51 @@
 {
   "dependencies": {
     "#shared": "workspace:../shared/build",
-    "axios": "1.5.0",
+    "axios": "1.7.9",
     "chevrotain": "workspace:./lib/chevrotain",
     "cors": "2.8.5",
     "date-ops": "2.2.0",
-    "envalid": "7.3.1",
-    "express": "4.18.2",
-    "fluent-ffmpeg": "2.1.2",
-    "glob": "10.3.10",
-    "helmet": "7.0.0",
-    "jsdom": "22.1.0",
-    "luxon": "3.4.2",
+    "envalid": "8.0.0",
+    "express": "4.21.2",
+    "fluent-ffmpeg": "2.1.3",
+    "glob": "11.0.1",
+    "helmet": "8.0.0",
+    "jsdom": "26.0.0",
+    "luxon": "3.5.0",
     "mongoose": "7.5.0",
     "node-id3": "0.2.6",
-    "node-media-server": "2.6.2",
+    "node-media-server": "4.0.7",
     "node-schedule": "2.1.1",
     "rand-picker": "1.1.0",
-    "reflect-metadata": "^0.2.1",
+    "reflect-metadata": "0.2.2",
     "serve-index": "1.9.1",
     "sha256-file": "1.0.0",
-    "socket.io": "4.7.2",
+    "socket.io": "4.8.1",
     "tsyringe": "4.8.0",
     "youtube-mp3-downloader": "0.7.11",
-    "zod": "3.22.2"
+    "zod": "3.24.1"
   },
   "description": "",
   "devDependencies": {
     "#sharedSrc": "workspace:../shared/src",
     "@chevrotain/types": "11.0.3",
-    "@types/cors": "2.8.14",
-    "@types/express": "4.17.17",
-    "@types/fluent-ffmpeg": "2.1.22",
-    "@types/jest": "29.5.4",
-    "@types/jsdom": "21.1.1",
-    "@types/luxon": "3.3.1",
-    "@types/node": "18.17.14",
-    "@types/node-schedule": "2.1.0",
-    "@types/serve-index": "1.9.1",
-    "@types/sha256-file": "1.0.1",
-    "@types/supertest": "2.0.12",
-    "dotenv": "16.3.1",
+    "@types/cors": "2.8.17",
+    "@types/express": "5.0.0",
+    "@types/fluent-ffmpeg": "2.1.27",
+    "@types/jest": "29.5.14",
+    "@types/jsdom": "21.1.7",
+    "@types/luxon": "3.4.2",
+    "@types/node": "22.10.7",
+    "@types/node-schedule": "2.1.7",
+    "@types/serve-index": "1.9.4",
+    "@types/sha256-file": "1.0.3",
+    "@types/supertest": "6.0.2",
+    "dotenv": "16.4.7",
     "jest": "workspace:../node_modules/jest",
-    "nodemon": "3.0.2",
-    "supertest": "6.3.3",
-    "ts-node": "10.9.1",
-    "tsc-alias": "1.8.7"
+    "nodemon": "3.1.9",
+    "supertest": "7.0.0",
+    "ts-node": "10.9.2",
+    "tsc-alias": "1.8.10"
   },
   "main": "build/index.js",
   "name": "server",
