--- a/packages/package.json
+++ b/packages/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.6.1",
     "@commitlint/config-conventional": "19.6.0",
+    "@stylistic/eslint-plugin-ts": "^2.13.0",
     "@types/jest": "29.5.14",
     "@typescript-eslint/eslint-plugin": "8.21.0",
     "@typescript-eslint/parser": "8.21.0",
@@ -31,7 +32,8 @@
     "standard-version": "9.5.0",
     "ts-jest": "29.2.5",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.21.0"
   },
   "license": "UNLICENSED",
   "name": "mcenter",
